--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1,5 +1,16 @@
 % Encoding: UTF-8
 
+@TechReport{Aaronson2001,
+  author      = {Aaronson, S.},
+  title       = {Stylometric clustering: A comparison of data-driven and syntactic features},
+  institution = {Computer Science Department, University of California, Berkeley},
+  year        = {2001},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2019.04.10},
+  url         = {https://www.scottaaronson.com/papers/sc.doc},
+}
+
 @InProceedings{Abbasi2007,
   author    = {Abbasi, A. and Chen, H.},
   title     = {Categorization and analysis of text in computer mediated communication archives using visualization},
@@ -9,6 +20,16 @@
   doi       = {10.1145/1255175.1255178},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Book{Abbott2008,
+  title     = {The Cambridge Introduction to Narrative},
+  publisher = {Cambridge University Press},
+  year      = {2008},
+  author    = {Abbott, H. P.},
+  series    = {Cambridge Introductions to Literature},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @Article{Abe2004,
@@ -320,6 +341,16 @@
   timestamp = {2019.04.05},
 }
 
+@InProceedings{Akiva2012,
+  author    = {Akiva, N. and Koppel, M.},
+  title     = {Identifying Distinct Components of a Multi-author Document},
+  booktitle = {European Intelligence and Security Informatics Conference},
+  year      = {2012},
+  doi       = {10.1109/eisic.2012.16},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @Article{Alberich2002,
   author    = {Alberich, R. and Miro-Julia, J. and Rossello, F.},
   title     = {{Marvel Universe} looks almost like a real social network},
@@ -398,6 +429,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.aaai.org/ocs/index.php/FSS/FSS10/paper/view/2305},
+}
+
+@Article{Allison2011,
+  author    = {Allison, S. and Heuser, R. and Jockers, M. and Moretti, F. and Witmore, M.},
+  title     = {Quantitative formalism: an experiment},
+  journal   = {Literary Lab},
+  year      = {2011},
+  pages     = {1},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @InProceedings{Alm2005,
@@ -579,6 +620,16 @@
   url          = {https://pudding.cool/2017/03/film-dialogue/index.html},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@TechReport{Andrews2007,
+  author      = {Andrews, N. O. and Fox, E. A.},
+  title       = {Recent Developments in Document Clustering},
+  institution = {Department of Computer Science, Virginia Tech},
+  year        = {2007},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2019.04.10},
 }
 
 @InProceedings{Andrews2012,
@@ -836,6 +887,19 @@
   url       = {https://www.aaai.org/Papers/Symposia/Fall/1999/FS-99-01/FS99-01-014.pdf},
 }
 
+@Article{Baayen1996,
+  author    = {Baayen, H. and van Halteren, H. and Tweedie, F.},
+  title     = {Outside the cave of shadows: using syntactic annotation to enhance authorship attribution},
+  journal   = {Literary and Linguistic Computing},
+  year      = {1996},
+  volume    = {11},
+  number    = {3},
+  pages     = {121-132},
+  doi       = {10.1093/llc/11.3.121},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @InProceedings{Baccianella2010,
   author    = {Baccianella, Stefano and Esuli, Andrea and Sebastiani, Fabrizio},
   title     = {SentiWordNet 3.0: An Enhanced Lexical Resource for Sentiment Analysis and Opinion Mining},
@@ -941,6 +1005,16 @@
   timestamp = {2019.04.07},
 }
 
+@InCollection{Bakhtin1981a,
+  author    = {Bakhtin, M.},
+  title     = {Epic and novel: Towards a methodology for the study of the novel},
+  booktitle = {The dialogic imagination: four essays},
+  publisher = {Unversity of Texas Press},
+  year      = {1981},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @Book{Bakhtin1986,
   title     = {Speech Genres and Other Late Essays},
   publisher = {University of Texas Press},
@@ -959,6 +1033,16 @@
   doi       = {10.1109/wi-iat.2009.340},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Book{Baldick2008,
+  title     = {The Oxford dictionary of literary terms},
+  publisher = {Oxford University Press},
+  year      = {2008},
+  author    = {Baldick, C.},
+  series    = {Oxford Paperbacks},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @PhdThesis{Baldwin1947,
@@ -1226,6 +1310,16 @@
   timestamp = {2019.03.30},
 }
 
+@InProceedings{Basili2008,
+  author    = {Basili, R. and Marocco, P. and Milizia, D.},
+  title     = {Semantically Rich Spaces for Document Clustering},
+  booktitle = {19th International Conference on Database and Expert Systems Applications},
+  year      = {2008},
+  doi       = {10.1109/dexa.2008.109},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @Article{Bassiou2010,
   author    = {Bassiou, N. and Moschou, V. and Kotropoulos, C.},
   title     = {Speaker Diarization Exploiting the Eigengap Criterion and Cluster Ensembles},
@@ -1384,6 +1478,17 @@
   url       = {https://apps.dtic.mil/docs/citations/ADA439422},
 }
 
+@InProceedings{Bekkerman2007,
+  author    = {Bekkerman, R. and Raghavan, H. and Allan, J. and Eguchi, K.},
+  title     = {Interactive clustering of text collections according to a user-specified criterion},
+  booktitle = {20th international joint conference on Artifical intelligence},
+  year      = {2007},
+  pages     = {684-689},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+  url       = {https://dl.acm.org/citation.cfm?id=1625275.1625385},
+}
+
 @InCollection{Belle1982,
   author    = {Belle, D.},
   title     = {The Stress of Caring: Women as Providers of Social Support},
@@ -1405,6 +1510,18 @@
   doi       = {10.1016/j.inffus.2015.08.005},
   owner     = {Vincent},
   timestamp = {2019.03.24},
+}
+
+@InCollection{Bemong2010,
+  author    = {Bemong, N. and Borghart, P.},
+  title     = {State of the Art},
+  booktitle = {Bakhtin's Theory of the Literary Chronotope: Reflections, Applications, Perspectives},
+  publisher = {Academia Press},
+  year      = {2010},
+  chapter   = {1},
+  pages     = {3-16},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @PhdThesis{Bengoetxea2003,
@@ -1499,6 +1616,15 @@
   doi       = {10.1109/cvpr.2004.1315253},
   owner     = {Vincent},
   timestamp = {2019.03.31},
+}
+
+@Book{Berge1958,
+  title     = {Théorie des graphes et ses applications},
+  publisher = {Dunot},
+  year      = {1958},
+  author    = {Berge, C.},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @InProceedings{Berger-Wolf2006,
@@ -1970,6 +2096,44 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://www.jstor.org/stable/4133949},
+}
+
+@Article{Borgatti2005,
+  author    = {Borgatti, S. P.},
+  title     = {Centrality and network flow},
+  journal   = {Social Networks},
+  year      = {2005},
+  volume    = {27},
+  number    = {1},
+  pages     = {55-71},
+  doi       = {10.1016/j.socnet.2004.11.008},
+  owner     = {Vincent},
+  timestamp = {2013.03.31},
+}
+
+@Article{Borgatti2006,
+  author    = {Borgatti, S. P. and Everett, M. G.},
+  title     = {A Graph-theoretic perspective on centrality},
+  journal   = {Social Networks},
+  year      = {2006},
+  volume    = {28},
+  number    = {4},
+  pages     = {466-484},
+  doi       = {10.1016/j.socnet.2005.11.005},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
+@Article{Borgatti2009a,
+  author    = {Borgatti, S. P. and Mehra, A. and Brass, D. J. and Labianca, G.},
+  title     = {Network Analysis in the Social Sciences},
+  journal   = {Science},
+  year      = {2009},
+  volume    = {323},
+  pages     = {5916},
+  doi       = {10.1126/science.1165821},
+  owner     = {Vincent},
+  timestamp = {2015.11.26},
 }
 
 @InProceedings{Borin2007,
@@ -3842,6 +4006,7 @@
 
 @Article{Dagan1999,
   author    = {Dagan, I. and Lee, L. and Pereira, F. C. N.},
+  title     = {Similarity-Based Models of Word Cooccurrence Probabilities},
   journal   = {Machine Learning},
   year      = {1999},
   volume    = {34},
@@ -5546,6 +5711,15 @@
   timestamp = {2019.04.02},
 }
 
+@Book{Fowler1982,
+  title     = {Kinds of Literature: An Introduction to the Theory of Genres and Modes},
+  publisher = {Clarendon Press},
+  year      = {1982},
+  author    = {Fowler, A.},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @Electronic{Francis1964,
   author       = {Francis, W. N. and Kučera, H.},
   year         = {1964},
@@ -6601,6 +6775,17 @@
   timestamp = {2019.04.09},
 }
 
+@TechReport{Gupta2005,
+  author      = {Gupta, S. and Becker, H. and Kaiser, G. and Stolfo, S.},
+  title       = {A genre-based clustering approach to content extraction},
+  institution = {Department of Computer Science, Columbia University},
+  year        = {2005},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2019.04.10},
+  url         = {https://academiccommons.columbia.edu/doi/10.7916/D87P99M9},
+}
+
 @InProceedings{Ha2015,
   author    = {Ha, J.-W. and Kim, K.-M. and Zhang, B.-T.},
   title     = {Automated construction of visual-linguistic knowledge via concept learning from cartoon videos},
@@ -6953,6 +7138,15 @@
   timestamp = {2019.04.10},
 }
 
+@Book{Hennig2012,
+  title     = {Studying Social Networks: A Guide to Empirical Research},
+  publisher = {Campus},
+  year      = {2012},
+  author    = {Hennig, M. and Brandes, U. and Pfeffer, J. and Mergel, I.},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @Article{Henriques2013,
   author    = {Henriques, T. and Antunes, L. and Bernardes, J. and Matias, M. and Sato, D. and Costa-Santos, C.},
   title     = {Information-based measure of disagreement for more than two observers: a useful tool to compare the degree of observer disagreement},
@@ -7250,6 +7444,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/bf01830689},
   owner     = {Vincent},
   timestamp = {2019.03.25},
+}
+
+@Article{Holmes1995,
+  author    = {Holmes, D. I.},
+  title     = {The Federalist Revisited: New Directions in Authorship Attribution},
+  journal   = {Literary and Linguistic Computing},
+  year      = {1995},
+  volume    = {10},
+  number    = {2},
+  pages     = {111-127},
+  doi       = {10.1093/llc/10.2.111},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @Article{Holovatch2007,
@@ -8449,6 +8656,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.08.05},
 }
 
+@InCollection{Koschutzki2005a,
+  author    = {Koschützki, D. and Lehmann, K. A. and Tenfelde-Podehl, D. and Zlotowski, O.},
+  title     = {Advanced centrality concepts},
+  booktitle = {Network Analysis: Methodological Foundations},
+  publisher = {Springer},
+  year      = {2005},
+  volume    = {3418},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {83-111},
+  doi       = {10.1007/978-3-540-31955-9_5},
+  owner     = {Vincent},
+  timestamp = {2010.08.05},
+}
+
 @Article{Kossinets2006,
   author    = {Kossinets, G.},
   title     = {Empirical Analysis of an Evolving Social Network},
@@ -8920,6 +9141,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.26},
 }
 
+@Article{Layton2011,
+  author    = {Layton, R. Watters, P. Sazelay, R.},
+  title     = {Automated unsupervised authorship analysis using evidence accumulation clustering},
+  journal   = {Natural Language Engineering},
+  year      = {2011},
+  volume    = {19},
+  number    = {01},
+  pages     = {95-120},
+  doi       = {10.1017/s1351324911000313},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @InProceedings{Le2015,
   author    = {Le, T.-N. and Luqman, M. M. and Burie, J.-C. and Ogier, J.-M.},
   title     = {A Comic Retrieval System Based on Multilayer Graph Representation and Graph Mining},
@@ -8969,6 +9203,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Raw Data},
   owner     = {Vincent},
   timestamp = {2019.03.12},
+}
+
+@Article{Ledger1994,
+  author    = {Ledger, G.},
+  title     = {Shakespeare, Fletcher, and the Two Noble Kinsmen},
+  journal   = {Literary and Linguistic Computing},
+  year      = {1994},
+  volume    = {9},
+  number    = {3},
+  pages     = {235-247},
+  doi       = {10.1093/llc/9.3.235},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @Book{Ledoux1986,
@@ -9999,6 +10246,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.10.25},
 }
 
+@Book{Madsen1994,
+  title     = {Rereading Allegory: A narrative approach to genre},
+  publisher = {Macmillan},
+  year      = {1994},
+  author    = {Madsen, D. L.},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @Article{Mahlberg2012,
   author    = {Mahlberg, M. and Smith, C.},
   title     = {Dickens, the suspended quotation and the corpus},
@@ -10159,6 +10415,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1017/ccol0521856965.005},
   owner     = {Vincent},
   timestamp = {2019.03.31},
+}
+
+@TechReport{Margonari2011,
+  author      = {Margonari, M.},
+  title       = {An Unsupervised Text Classification Method Implemented in Scilab},
+  institution = {Open Source Engineering},
+  year        = {2011},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2019.04.10},
 }
 
 @InCollection{Marin2011,
@@ -11213,6 +11479,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.22},
 }
 
+@Book{Mosteller1964,
+  title     = {Inference and Disputed Authorship: The Federalists},
+  publisher = {Addison-Wesley},
+  year      = {1964},
+  author    = {Mosteller, F. and Wallace, D.},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @Article{Motter2003,
   author    = {Motter, A. E. and Nishikawa, T. and Lai, Y.-C.},
   title     = {Large-scale structural organization of social networks},
@@ -12260,6 +12535,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=2391033},
 }
 
+@Article{Onnela2005,
+  author    = {Onnela, J. P. and Saramaki, J. and Kertesz, J. and Kaski, K.},
+  title     = {Intensity and coherence of motifs in weighted complex networks},
+  journal   = {Physical Review E},
+  year      = {2005},
+  volume    = {71},
+  number    = {6},
+  pages     = {065103},
+  doi       = {10.1103/PhysRevE.71.065103},
+  owner     = {Vincent},
+  timestamp = {2010.08.02},
+}
+
 @Article{Onnela2007a,
   author    = {Onnela, J.-P. and Saramäki, J. and Hyvönen, J. and Szabó, G. and Lazer, D. and Kaski, K. and Kertész, J. and Barabási, A.-L.},
   title     = {Structure and tie strengths in mobile communication networks},
@@ -12675,6 +12963,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://dl.acm.org/citation.cfm?id=1534810},
 }
 
+@Article{Pavlyshenko2012,
+  author    = {Pavlyshenko, B.},
+  title     = {The Clustering of Author's Texts of English Fiction in the Vector Space of Semantic Fields},
+  journal   = {arXiv},
+  year      = {2012},
+  volume    = {cs.CL},
+  pages     = {1212.1478},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+  url       = {https://arxiv.org/abs/1212.1478},
+}
+
 @InProceedings{Peel2015,
   author    = {Peel, L. and Clauset, A.},
   title     = {Detecting change points in the large-scale structure of evolving networks},
@@ -12719,6 +13019,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/msp.2007.4286569},
   owner     = {Vincent},
   timestamp = {2019.03.28},
+}
+
+@Article{Pentland2007a,
+  author    = {Pentland, B. T. and Feldman, M. S.},
+  title     = {Narrative Networks : Patterns of Technology and Organization},
+  journal   = {Organization Science},
+  year      = {2007},
+  volume    = {18},
+  number    = {5},
+  pages     = {781-795},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @Book{Pentland2008,
@@ -12991,6 +13303,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=2002782},
 }
 
+@InProceedings{Poudat2003,
+  author    = {Poudat, C. and Cleuziou, G.},
+  title     = {Genre and Domain Processing in an Information Retrieval Perspective},
+  booktitle = {International Conference on Web Engineering},
+  year      = {2003},
+  volume    = {2722},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {399-402},
+  doi       = {10.1007/3-540-45068-8_73},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @InProceedings{Pouliquen2007,
   author    = {Pouliquen, B. and Steinberger, R. and Best, C.},
   title     = {Automatic detection of quotations in multilingual news},
@@ -13028,6 +13353,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/11926078_3},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Book{Propp1984,
+  title     = {Theory and History of Folklore},
+  publisher = {Manchester University Press},
+  year      = {1984},
+  author    = {Propp, V. I. A.},
+  volume    = {5},
+  series    = {Theory and history of literature},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @Electronic{Pudney2014,
@@ -13686,6 +14022,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.08},
 }
 
+@InProceedings{Robnik-Sikonja1997,
+  author    = {Robnik-Sikonja, M. and Kononenko, I.},
+  title     = {An adaptation of Relief for attribute estimation in regression},
+  booktitle = {14th International Conference on Machine Learning},
+  year      = {1997},
+  pages     = {296-304},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @Article{Robson2016,
   author    = {Robson, D.},
   title     = {Heroes and villains},
@@ -13710,6 +14056,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {http://www.bbc.com/culture/story/20180503-our-fiction-addiction-why-humans-need-stories},
   owner        = {Vincent},
   timestamp    = {2018.06.28},
+}
+
+@TechReport{Rochat2009,
+  author      = {Rochat, Y.},
+  title       = {Closeness centrality extended to unconnected graphs : the harmonic centrality index},
+  institution = {ASNA conference},
+  year        = {2009},
+  owner       = {Vincent},
+  timestamp   = {2019.04.10},
 }
 
 @Article{Rochat2014,
@@ -14111,6 +14466,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   school    = {Columbia University},
   year      = {2011},
   type      = {Master's Thesis},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
+@InProceedings{Sack2011a,
+  author    = {Sack, G. A.},
+  title     = {Simulating plot: Towards a generative model of narrative structure},
+  booktitle = {AAAI Fall Symposium},
+  year      = {2011},
+  pages     = {127-136},
   owner     = {Vincent},
   timestamp = {2019.04.10},
 }
@@ -14574,6 +14939,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Analysis Methods},
   owner     = {Vincent},
   timestamp = {2015.08.06},
+}
+
+@Article{Shahnaz2006,
+  author    = {Shahnaz, F. and Berry, M. W. and Pauca, V. P. and Plemmons, R. J.},
+  title     = {Document clustering using nonnegative matrix factorization},
+  journal   = {Information Processing \& Management},
+  year      = {2006},
+  volume    = {42},
+  number    = {2},
+  pages     = {373-386},
+  doi       = {10.1016/j.ipm.2004.11.005},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @Article{Shannon1948,
@@ -15168,6 +15546,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/asonam.2010.18},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@TechReport{Steinbach2000,
+  author      = {Steinbach, M. and Karypis, G. and Kumar, V.},
+  title       = {A Comparison of Document Clustering Techniques},
+  institution = {Department of Computer Science and Egineering, University of Minnesota},
+  year        = {2000},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2019.04.10},
 }
 
 @Book{Steinberg2012,
@@ -16471,6 +16859,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.06.04},
 }
 
+@Book{Vladimir1968,
+  title     = {Morphology of the folktale},
+  publisher = {University of Texas Press},
+  year      = {1968},
+  author    = {Propp, V. I. A.},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
+}
+
 @InProceedings{Volkova2010,
   author    = {Volkova, E. P. and Mohler, B. J. Meurers, D. and Gerdemann, D. and Bülthoff, H. H.},
   title     = {Emotional perception of fairy tales: Achieving agreement in emotion annotation of text},
@@ -16680,6 +17077,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/15252019.2010.10722177},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InProceedings{Wang2011,
+  author    = {Wang, X. and Tang, J. and Liu, H.},
+  title     = {Document Clustering via Matrix Representation},
+  booktitle = {11th IEEE International Conference on Data Mining},
+  year      = {2011},
+  doi       = {10.1109/icdm.2011.59},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @Article{Wang2015,
@@ -16958,6 +17365,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/997939.998008},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Article{Willett1988,
+  author    = {Willett, P.},
+  title     = {Recent trends in hierarchic document clustering: A critical review},
+  journal   = {Information Processing \& Management},
+  year      = {1988},
+  volume    = {24},
+  number    = {5},
+  pages     = {577-597},
+  doi       = {10.1016/0306-4573(88)90027-1},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @Article{Williams1964,
@@ -17718,6 +18138,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://cloudfront.escholarship.org/dist/prd/content/qt12h612c9/qt12h612c9.pdf},
+}
+
+@PhdThesis{Zhang2013,
+  author    = {Zhang, B.},
+  title     = {Learning Features for Text Classification},
+  school    = {University of Washington},
+  year      = {2013},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2019.04.10},
 }
 
 @Article{Zhao2003,
